Changes for Farabi

0.15  TBD
    - Allow scripts to be posted to Farabi (Thanks to Toby Inkster).
    - Added File::Which and Debug::Client to dependencies.

0.14  2012.12.9
    - Options tab is now a dialog
    - Run with different Perl, Perl 6 runtimes under unsafe operations
    - More farabi6 functionality backported: New file, Open URL, Open file, 
      and syntax check.
    - Update Bootstrap to version 2.2.2

0.13  2012.12.9
    - Added Perlito 6 javascript runtime and update Perlito 5 javascript runtime to 5.014001 (2012-12-09)
    - Removed Humane.js notification library. Basically it becomes annoying
    - Add Perl 6 mode to language mode selector
    - Updated to CodeMirror 3.0rc2

0.12  2012.12.9
    - Removed git files from distribution that was introduced in 0.11
    - Added CREDITS.md and LICENSE
    - Added "POD Viewer" show/hide option (Thanks to Joel Berger)
    - Added "Run on Server" option that is enabled by FARABI_UNSAFE environment variable
      (Thanks to Toby Inkster)

0.11  2012.12.9
    - Moved to Github instead of Google Code

0.10  2012.9.20
    - Fix xt/eol.t for CPAN testers with RELEASE_TESTING enabled (CPAN testers; Thank you)

0.09  2012.9.19
    - Added missing File::Find::Rule to dependencies (Yuni Kim; Thank you)
    - Added missing Test::EOL and Test::More dependencies
    - Update CodeMirror to 20481c3 for more bug fixes

0.08  2012.9.16
    - Added a help icon over the annotated line
    - Bigger side-by-side POD preview
    - Bigger editor
    - Perl mode is by default selected
    - Dynamically load CodeMirror themes
    - Run perl critic on severity option change
    - Better editor statistics. More Humane :)
    - Add POD checking using Pod::Checker
    - Perl Critic and pod checking are performed on every editor change
    - Removed pod check and critique code buttons. There are always run in the background.
    - Removed humane.js notification noise from perl critic and checker