@@ -258,6 +258,10 @@ function startFarabi(editorId) {
 			text    : "<b>Niecza</b> is a Perl 6 implementation focusing on optimization and efficient implementation research. It targets the Common Language Runtime (<a href='http://en.wikipedia.org/wiki/Common_Language_Infrastructure' target='_blank'>ECMA-335</a>; implementations are 'Mono' and '.NET').",
 			url     : "https://github.com/sorear/niecza/blob/master/README.pod",
 		},
+		"parrot"    : {
+			text   : "<b>Parrot</b> is a virtual machine designed to efficiently compile and execute bytecode for dynamic languages.",
+			url    : "http://www.parrot.org/",
+		},
 		"perl": {
 			text    : "<b>Perl 5</b> is a highly capable, feature-rich programming language with over 24 years of development.",
 			url     : "http://perl.org",
@@ -317,6 +321,11 @@ function startFarabi(editorId) {
 		} else if(runtime == "rakudo") {
 			// Rakudo Perl 6
 			$.post('/run_rakudo', {"source": editor.getValue() }, function(result) {
+				show_cmd_output(result);
+			});
+		} else if(runtime == "parrot") {
+			// Rakudo Perl 6
+			$.post('/run_parrot', {"source": editor.getValue() }, function(result) {
 				show_cmd_output(result);
 			});
 		} else if(runtime == "niecza") {
