@@ -215,6 +215,10 @@
                 Niecza
               </option>
 
+              <option id="parrot">
+		Parrot
+	      </option>
+
               <option id="perlito-6">
                 Perlito 6
               </option>
