@@ -3,6 +3,7 @@ Changes for Farabi
 0.15  TBD
     - Allow scripts to be posted to Farabi (Thanks to Toby Inkster).
     - Added File::Which and Debug::Client to dependencies.
+    - Ability to run PIR scripts on Parrot virtual machine.
 
 0.14  2012.12.9
     - Options tab is now a dialog
